Fix 'Umbrello crashes when closing the application'.

Make sure that bird view do not access a destroyed view.

BUG:347356